fixed event popups not being functional on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,6 +151,18 @@ body {
 
 }
 
+.no-touch .mask figure:hover figcaption,
+.mask figure.cs-hover figcaption {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+    -moz-transition: -moz-transform 0.4s, opacity 0.1s;
+    transition: transform 0.4s, opacity 0.1s;
+}
+
 }
 
 
@@ -185,6 +197,18 @@ body {
     padding-bottom: 0px!important;
     font-size: 10px;
     height: 210px;
+}
+
+.no-touch .mask figure figcaption,
+.mask figure.cs-hover figcaption {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
+    -moz-transition: -moz-transform 0.4s, opacity 0.1s;
+    transition: transform 0.4s, opacity 0.1s;
 }
 
 }
@@ -665,17 +689,7 @@ a:after {
 	transition: transform 0.4s, opacity 0.1s 0.3s;
 }
 
-.no-touch .mask figure:hover figcaption,
-.mask figure.cs-hover figcaption {
-	opacity: 1;
-	-webkit-transform: translateY(0px);
-	-moz-transform: translateY(0px);
-	-ms-transform: translateY(0px);
-	transform: translateY(0px);
-	-webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
-	-moz-transition: -moz-transform 0.4s, opacity 0.1s;
-	transition: transform 0.4s, opacity 0.1s;
-}
+
 
 .mask figcaption a {
 	position: absolute;
